# prj_huggingface

./: .gitignore  1_1_object_detection_yolo_origin.ipynb  1_1_object_deytection_yolo.ipynb  README.md  main.py  pyproject.toml  wd_dogcat.ipynb
images/: 1_0_huggingface.ipynb
project_server/: main.py
vision_project/: main.py
vision_project/pages/: 01_object_detection copy 2.py  01_object_detection copy 3.py  01_object_detection copy.py  01_object_detection.py  test.py  test2.py
